# floormap

./: .env  Cargo.toml  Makefile  build.rs  install.sh  start.sh  upload_form.html
configs/: nginx-sites-enabled
db/: floor.sqlite3
dev-scripts/: print-model
migrations/2019-04-26-111551_initial/: down.sql  up.sql
scripts/: import-floor-plan  import-postgres-backup  make-backup  make-secrets  upload-script
scripts/data/: postgres-initial-steps.sql
src/: flextimestamp.rs  flexuuid.rs  lib.rs  models.rs  schema.rs
src/apiv1/: mod.rs
src/db/: mod.rs
src/template/: menu.rs  mod.rs
templates/: arrange.mustache  arrange_style.mustache  fileupload.mustache  login.mustache  root.mustache  root_script.mustache  style.mustache
wip/: regen-postgres-db
