[package]
name = "floorplan"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# default = ["sqlite"]

# can have sqlite or postgresql backends
floorplan_sqlite = []
floorplan_postgres = []

[dependencies]

iron = "*"
mount = "*"
router = "*"
lazy_static = "*"

staticfile = "*"
diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
chrono = { version = "*", features = ["serde"] }
r2d2 = "*"
r2d2-diesel = "*"

dotenv = "*"


serde_derive = "*"
serde = "*"
serde_json = "*"
hyper = "*"
params = "*"

uuid = { version = "0.7", features = ["v4"] }

