[package]
name = "floormap"
version = "0.1.0"
authors = ["Andrew Yourtchenkoo <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# default = ["sqlite"]

# can have sqlite or postgresql backends
floormap_sqlite = []
floormap_postgres = []

[dependencies]

iron = "*"
mount = "*"
router = "*"
lazy_static = "*"

staticfile = "*"
diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
chrono = { version = "*", features = ["serde"] }
r2d2 = "*"
r2d2-diesel = "*"

dotenv = "*"


serde_derive = "*"
serde = "*"
serde_json = "*"
hyper = "*"
params = "*"

uuid = { version = "0.7", features = ["v4"] }
mustache = "*"
urlencoded = "*"
clap = "*"
image = "*"
csv = "1.1.*"
zip = "*"
multipart = "*"

rsp10 = { git = "https://github.com/ayourtch/rsp10.git" }



