[package]
name = "floormap"
version = "0.1.0"
authors = ["Andrew Yourtchenkoo <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# default = ["sqlite"]

# can have sqlite or postgresql backends
floormap_sqlite = []
floormap_postgres = []

[dependencies]

iron = { git = "https://github.com/ayourtch/iron" }
mount = { git = "https://github.com/ayourtch/mount" }
router = { git = "https://github.com/ayourtch/router" }
lazy_static = "*"

staticfile = { git = "https://github.com/ayourtch/staticfile" }
diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
chrono = { version = "*", features = ["serde"] }
r2d2 = "*"
r2d2-diesel = "*"

dotenv = "*"

serde = {version = "1.0", features = [ "derive" ] }
serde_json = "*"
hyper = "*"
params = { git = "https://github.com/ayourtch/params" }

uuid = { version = "0.7", features = ["v4"] }
mustache = "*"
urlencoded = "*"
clap = "2.33"
image = "*"
csv = "1.1.*"
zip = "0.5.3"
# multipart = { git = "https://github.com/ayourtch/multipart" }
regex = "*"

iron-sessionstorage = { git = "https://github.com/ayourtch/iron-sessionstorage.git" }
bodyparser = { git = "https://github.com/ayourtch/body-parser" }



